dnstorm/app/static/scss/app.scss
/* ... */
.message-bar.info {
    background-color: #FFF7B2;
    border-bottom: 1px solid #FFF499;
    color: #675D00;
}

.message-bar.warning {
    background-color: #FFDEDE;
    border-bottom: 1px solid $red;
    color: $red;
}

// Header

h1 {
    line-height: 1;
    a {
        font-family: 'Montserrat Subrayada', sans-serif;
        color: lighten($black, 10%);
        letter-spacing: emCalc(-3px);
        @include text-shadow(
            lighten($black, 40%) 1px 1px 0,
            lighten($black, 60%) 2px 2px 0,
            lighten($black, 80%) 3px 3px 0,
            lighten($black, 100%) 4px 4px 0
        );
        &:hover {
            color: darken($black, 20%);
        }
    }
}

.top-bar {
    height: 40px;
    h1 {
        line-height: 1;
        text-align: left;
        a {
            font-family: 'Montserrat Subrayada', sans-serif;
            color: darken($white, 10%);
            letter-spacing: emCalc(-3px);
            @include text-shadow(
                darken($white, 40%) 1px 1px 0,
                darken($white, 60%) 2px 2px 0,
                darken($white, 80%) 3px 3px 0,
                darken($white, 100%) 4px 4px 0
            );
            &:hover {
                color: lighten($white, 20%);
            }
        }
    }
    ul.right li.torso a {
        padding-right: 0;
    }
    .has-icon i {
        font-size: emCalc(24px);
    }
}

.contain-to-grid .top-bar {
    overflow: hidden;
}

.upper-bar-wrap {
    @include crumb-container;
    width: 100%;
    margin: 0;
    .upper-bar-inner {
        border: 0;
        margin: 0;
        padding: 0;
    }
}



a.logo-faded {
    font-family: 'Montserrat Subrayada', sans-serif;
    font-size: emCalc(25px);
    color: lighten($black, 30%);
    letter-spacing: emCalc(-1px);
    @include text-shadow(
        lighten($black, 60%) 1px 1px 0,
        lighten($black, 80%) 2px 2px 0
    );
    &:hover {
        color: darken($black, 40%);
    }
}

form.search-form i.fi-zoom-in {
    font-size: 24px;
    color: $grey;
}

#search-options.f-dropdown {
    width: auto;
}

.search-results {
    .search-results-item {
        h4 {
            span.label {
                margin-right: emCalc(10px);
            }
            span.highlighted {
                font-weight: bold;
            }
        }
        p.search-result-text {
            color: #999999;
            margin-bottom: emCalc(6px);
            span.highlighted {
                color: $black;
                font-weight: bold;
            }
        }
    }
}

// CKEditor dialog

table.cke_dialog {
    width: 250px !important;
    left: 35% !important;
    top: 100px !important;
}

// Pagination

p.pagination {
    color: $grey;
    padding-top: emCalc(30px);
}

// Problem

.problem-form {
    #id_max {
        margin-bottom: 0;
    }
}

h6.subheader {
    margin: 0;
    font-size: emCalc(14px);
}

.list-item {
    padding: emCalc(6px);
    margin: emCalc(6x);
    border-bottom: 1px solid lighten($black, 65%);
    h4 {
        margin: 4px 0 8px 0;
        color: $black;
        line-height: 1;
        @include text-shadow(
            lighten($black, 60%) 1px 1px 0,
            lighten($black, 80%) 2px 2px 0
        );
    }
    .counter {
        text-align: center;
        background: lighten($black, 65%);
        padding: 14px 5px;
        border-left: 2px solid $white;
        border-right: 2px solid $white;
        @include text-shadow(
            lighten($black, 50%) 1px 1px 0,
            lighten($black, 70%) 2px 2px 0
        );
        span {
            display: block;
        }
        .number {
            color: $black;
            font-size: emCalc(30px);
            letter-spacing: emCalc(-1px);
            line-height: 1;
        }
        .description {
            color: $light-black;
            font-size: emCalc(12px);
        }
    }
}

.problem-list-item {
    .counter {
        width: 44.333%;
    }
    .problem-alternative-counter {
        margin-right: 1em;
    }
}

.problem-detail {
    .description {
        margin: 5px 0;
    }
}

.problem-icons {
    margin: 0;
    font-size: emCalc(50px);
}

#criterias .criteria {
    border-bottom: 1px solid $light-grey;
    margin: 0.5em;
    padding: 0.5em;
    p {
        margin: 0.3rem 0;
    }
}

.criteria-list-item {
    .counter {
        width: 98.333%;
    }
    .columns.criteria-info {
        padding-left: emCalc(10px);
    }
}

.criteria-vote {
    border-top: 1px dotted $light-grey;
    padding: emCalc(15px) 0;
    .stars {
        font-size: 1.6em;
        color: $light-grey;
        i.selecting,
        i.selected {
            color: $yellow;
        }
    }
}

.new-criteria-button {
    margin-top: emCalc(30px);
}


.user-box {
    @include panel(lighten($black, 70%), 5px);
    @include border-radius($global-radius);
    .avatar {
        @include thumb(1px, $light-black);
    }
    .contributed {
        color: $light-black;
        font-size: emCalc(12px);
    }
    a.username {
        font-weight: bold;
        margin: 5px 0 0 0;
    }
}

.user-labels {
    margin: 0;
    padding: 0;
    .user-label {
        margin: 0 emCalc(4px) 0 0;
        font-size: emCalc(22px);
        font-weight: bold;
        padding: emCalc(6px) emCalc(8px);
        line-height: emCalc(28px);
        border: 1px solid $light-grey;
        i {
            font-size: emCalc(28px);
        }
        span.caption {
            font-size: emCalc(11px);
            text-transform: lowercase;
        }
    }
}
/* ... */

